--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -71,6 +71,7 @@
         </style>
 
         <iron-pages
+                id="app-drawer-iron"
                 selected="[[routeData.page]]"
                 attr-for-selected="data-page"
                 fallback-selection="view404"
