--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -17,9 +17,8 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-
 <link rel="import" href="../../../bower_components/polymer-redux/polymer-redux.html">
-<link rel="import" href="reducers/reducers.html">
+<link rel="import" href="./reducers/reducers.html">
 <script>
     {
         /* global Redux, PolymerRedux */
