--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -18,7 +18,6 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -30,7 +29,6 @@
     <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../bower_components/web-component-tester/browser.js"></script>
     <script src="../../node_modules/redux/dist/redux.js"></script>
-    <script src="test_variables.js"></script>
     <link rel="import" href="../../src/mealorder/meal-order-client-app.html">
 </head>
 <body>
@@ -68,10 +66,17 @@
             assert.equal('2018-3-21', component.routeData.date);
         });
 
+        test('should instantiate the `meal-order-toolbar` component', function (done) {
+            const elementShadowRoot = component.shadowRoot;
+            const drawer = elementShadowRoot.querySelector("meal-order-toolbar");
+            assert.equal(drawer.tagName.toLocaleLowerCase(), MealOrderApp.MealOrderToolbar.is);
+            done();
+        });
+
         test('should instantiate the `meal-order-drawer` component', function (done) {
             const elementShadowRoot = component.shadowRoot;
             const drawer = elementShadowRoot.querySelector("meal-order-drawer");
-            assert.equal(drawer.tagName.toLocaleLowerCase(), "meal-order-drawer");
+            assert.equal(drawer.tagName.toLocaleLowerCase(), MealOrderApp.MealOrderDrawer.is);
             done();
         });
 
@@ -80,7 +85,7 @@
             setLocation('/#/menu/2018-03-23');
             const pages = component.shadowRoot.querySelector('#app-header-layout-iron');
             pages.forceSynchronousItemUpdate();
-            assert.equal(pages.selectedItem.tagName.toLocaleLowerCase(), "meal-order-menu-container");
+            assert.equal(pages.selectedItem.tagName.toLocaleLowerCase(),  MealOrderApp.MealOrderMenuContainer.is);
         });
 
     });
