--- a/client/user/test/mealorder/menu/meal-order-drawer_test.html
+++ b/client/user/test/mealorder/menu/meal-order-drawer_test.html
@@ -27,10 +27,10 @@
 
     <title>meal-order-client test</title>
 
-    <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../bower_components/web-component-tester/browser.js"></script>
-    <script src="../../node_modules/redux/dist/redux.js"></script>
-    <link rel="import" href="../../src/mealorder/menu/meal-order-drawer.html">
+    <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../../bower_components/web-component-tester/browser.js"></script>
+    <script src="../../../node_modules/redux/dist/redux.js"></script>
+    <link rel="import" href="../../../src/mealorder/menu/meal-order-drawer.html">
 </head>
 <body>
 
