--- a/client/user/test/mealorder/menu/meal-order-vendor-menu_test.html
+++ b/client/user/test/mealorder/menu/meal-order-vendor-menu_test.html
@@ -26,6 +26,7 @@
           content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <title>meal-order-vendor-menu test</title>
+
     <link rel="import" href="../../../src/mealorder/shell/meal-order-app-namespace.html">
     <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../../bower_components/web-component-tester/browser.js"></script>
@@ -48,20 +49,22 @@
 
         setup(() => {
             component = fixture('SimpleMenu');
-            component.menu = MealOrderAppTest.initialMenu;
+            component.menu = MealOrderAppTest.initialMenu[0];
         });
+
         test('should store menu correctly', function () {
             const CATEGORIES = 2;
             const DISHES_LENGTH = 5;
             const DISH_COST = 35;
 
-            assert.equal('Пюре', component.menu.name);
+            assert.equal('Пюре', component.menu.vendor);
             assert.equal(CATEGORIES, component.menu.categories.length);
             assert.equal('Первое блюдо', component.menu.categories[0].categoryName);
             assert.equal(DISHES_LENGTH, component.menu.categories[0].dishes.length);
             assert.equal('Суп гречневый', component.menu.categories[0].dishes[0].title);
             assert.equal(DISH_COST, component.menu.categories[0].dishes[0].price);
         });
+
         test('should expand and collapse on click', function () {
             const header = component.shadowRoot.querySelector('.menu-caption');
             const menu = component.shadowRoot.querySelector('#menu');
@@ -70,6 +73,7 @@
             header.click();
             assert.equal('expanded', menu.className);
         });
+
         test('should send `add-dish` event', function (done) {
             flush(function () {
                 const addButton = component.shadowRoot.querySelector('#menu > div:nth-child(1) > div:nth-child(3) > paper-item > .add-dish-icon > paper-icon-button');
