--- a/client/user/src/mealorder/menu/meal-order-user-cart.html
+++ b/client/user/src/mealorder/menu/meal-order-user-cart.html
@@ -30,6 +30,7 @@
                 overflow-x: hidden;
                 overflow-y: auto;
                 max-height: 93vh;
+                color: var(--paper-grey-700);
             }
 
             #total {
