--- a/client/user/test/mealorder/menu/meal-order-vendor-user-order_test.html
+++ b/client/user/test/mealorder/menu/meal-order-vendor-user-order_test.html
@@ -30,33 +30,20 @@
     <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../../bower_components/web-component-tester/browser.js"></script>
     <script src="../../../node_modules/redux/dist/redux.js"></script>
-    <link rel="import" href="../../../src/mealorder/menu/meal-order-vendor-menus.html">
+    <link rel="import" href="../../../src/mealorder/menu/meal-order-user-order.html">
     <script src="../test_variables.js"></script>
 
 </head>
 <body>
 
-<test-fixture id="VendorMenus">
+<test-fixture id="UserOrder">
     <template>
-        <meal-order-vendor-menus></meal-order-vendor-menus>
+        <meal-order-user-order></meal-order-user-order>
     </template>
 </test-fixture>
 
 <script>
     suite('meal-order-vendor-menu', function () {
-        let component;
-
-        setup(() => {
-            component = fixture('VendorMenus');
-            component.menuForDay = MealOrderAppTest.initialMenu;
-        });
-
-        test('should filter menu correctly', function () {
-            const NUMBER_OF_DISHES = 3;
-            const paperSearch = component.shadowRoot.querySelector('#paper-search');
-            paperSearch.query = "Суп";
-            assert.equal(component.filtered[0].categories[0].dishes.length, NUMBER_OF_DISHES);
-        });
 
     });
 </script>
