--- a/client/user/test/mealorder/menu/meal-order-vendor-menus_test.html
+++ b/client/user/test/mealorder/menu/meal-order-vendor-menus_test.html
@@ -55,6 +55,7 @@
             const NUMBER_OF_DISHES = 3;
             const paperSearch = component.shadowRoot.querySelector('#paper-search');
             paperSearch.query = "Суп";
+            console.log(component.filtered[0].categories[0].dishes);
             assert.equal(component.filtered[0].categories[0].dishes.length, NUMBER_OF_DISHES);
         });
 
