Add tests for `dish-removed`, `vendor-removed` events

--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </app-toolbar>
-                <meal-order-user-cart data-page="menu" date="[[routeData.date]]"></meal-order-user-cart>
+                <meal-order-user-cart data-page="menu" selected-date="[[routeData.date]]"></meal-order-user-cart>
             </div>
             <div data-page="history">
                 <app-toolbar>
