--- a/client/user/src/mealorder/menu/meal-order-user-cart.html
+++ b/client/user/src/mealorder/menu/meal-order-user-cart.html
@@ -22,6 +22,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="meal-order-user-order.html">
 <link rel="import" href="../shell/redux-store.html">
+<link rel="import" href="../shell/actions/user-actions.html">
 
 <dom-module id="meal-order-user-cart">
     <template>
@@ -76,8 +77,8 @@
                     /**
                      * Selected day.
                      */
-                    date: {
-                        type: Object,
+                    selectedDate: {
+                        type: Date,
                     },
 
                     /**
@@ -100,8 +101,8 @@
                         type: MealOrderApp.UserAction.REMOVE_DISH_FROM_ORDER,
                         dish
                     }),
-                    removeDishesByVendor: vendor => ({
-                        type: MealOrderApp.UserAction.REMOVE_DISHES_BY_VENDOR,
+                    removeVendorFromOrder: vendor => ({
+                        type: MealOrderApp.UserAction.REMOVE_VENDOR_FROM_ORDER,
                         vendor
                     })
                 }
@@ -109,12 +110,12 @@
 
             static get observers() {
                 return [
-                    '_getCurrentOrder(date)'
+                    '_getCurrentOrder(selectedDate)'
                 ];
             }
 
-            _getCurrentOrder(date) {
-                this.dispatch('getOrderedItems', new Date(date));
+            _getCurrentOrder(selectedDate) {
+                this.dispatch('getOrderedItems', new Date(selectedDate));
             }
 
             _getTotalAmount(currentOrder) {
@@ -132,7 +133,7 @@
             }
 
             _removeDishesByVendor(vendor) {
-                this.dispatch('removeDishesByVendor', vendor);
+                this.dispatch('removeVendorFromOrder', vendor);
             }
         }
 
