--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -23,6 +23,6 @@
         ADD_DISH: 'ADD_DISH',
         GET_ORDERED_ITEMS: 'GET_ORDERED_ITEMS',
         REMOVE_DISH_FROM_ORDER: 'REMOVE_DISH_FROM_ORDER',
-        REMOVE_DISHES_BY_VENDOR: 'REMOVE_DISHES_BY_VENDOR',
+        REMOVE_VENDOR_FROM_ORDER: 'REMOVE_VENDOR_FROM_ORDER',
     }
 </script>
