--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -182,7 +182,7 @@
                 case MealOrderApp.UserAction.REMOVE_DISH_FROM_ORDER: {
                     return state;
                 }
-                case MealOrderApp.UserAction.REMOVE_DISHES_BY_VENDOR: {
+                case MealOrderApp.UserAction.REMOVE_VENDOR_FROM_ORDER: {
                     return state;
                 }
                 case MealOrderApp.UserAction.GET_ORDERED_ITEMS: {
